bug(fan-base): fix invisible social media share buttons [WIP #134678595]

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -856,14 +856,3 @@ body {
   text-transform: none !important; }
   .gradientButton .donateNow {
     border-top: 0px solid black !important; }
-
-.intro-text h1 {
-  font-size: 1.2em; }
-
-.intro-text h2 {
-  font-size: 0.4em;
-  font-weight: 300; }
-
-.intro-text p {
-  color: #bfd4c2;
-  font-weight: 100; }
